# rs-asm-patch

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md
data/: dp.py  mPanPan1.matpat.ALR.500kbp.bed  mPanPan1_cen_misassemblies.bed  mPanPan1_cen_misassemblies_query.bed  mPanPan1_merged_dedup_asm.fa.gz.fai  mPanPan1_merged_dedup_asm.fa.gz.gzi  mPanPan1_merged_dedup_asm.wg.bed  mPanPan1_merged_dedup_asm_query.fa.gz.fai  mPanPan1_merged_dedup_asm_query.fa.gz.gzi  mPanPan1_trim.paf
data/test/merge_overlaps/: input.bed  output.bed
src/: cigar.rs  cli.rs  concensus.py  concensus.rs  interval.rs  io.rs  liftover.rs  main.rs  misassembly.rs
